--- a/post.html
+++ b/post.html
@@ -28,7 +28,7 @@
 <body>
 	<div class="container">
 <h1>Post game</h1>
-<form name="sidang" class="form-group">
+<form name="sidang" class="form-group  form-inline">
  <input class="form-control" type="text" name="name" placeholder="name...">
  <br><br>
  <input class="form-control" type="text" name="image" placeholder="url image.." />
